Implementación de un tutorial de trading algorítmico utilizando modelos GRU y Transformer con Backtrader. Se incluyen scripts para cargar y preparar datos, construir y entrenar modelos, evaluar su rendimiento y ejecutar estrategias de trading. Se actualizan las dependencias en requirements.txt y se generan gráficos de predicción y backtesting.

--- a/gru_trading/gru_tutorial.ipynb
+++ b/gru_trading/gru_tutorial.ipynb
@@ -23,7 +23,10 @@
    "outputs": [],
    "source": [
     "# Importar las bibliotecas necesarias\n",
+    "import matplotlib\n",
+    "matplotlib.use('Agg') # Usar el backend no interactivo para guardar gráficos\n",
     "import pandas as pd\n",
+    "import pandas_ta as ta\n",
     "import numpy as np\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "import tensorflow as tf\n",
@@ -34,31 +37,60 @@
     "# Cargar el conjunto de datos de precios de acciones\n",
     "df = pd.read_csv('../yahoo/AAPL.csv', index_col='datetime', parse_dates=True)\n",
     "\n",
-    "# Seleccionar la columna 'close' para el análisis\n",
-    "data = df[['close']]\n",
+    "# --- 1.1 Añadir un conjunto completo de Indicadores Técnicos ---\n",
+    "df.ta.rsi(length=14, append=True)\n",
+    "df.ta.macd(fast=12, slow=26, signal=9, append=True)\n",
+    "df.ta.bbands(length=20, append=True)\n",
+    "df.ta.atr(length=14, append=True)\n",
+    "df.ta.stoch(length=14, append=True)\n",
     "\n",
-    "# Escalar los datos al rango [0, 1] para un mejor rendimiento del modelo\n",
+    "# Eliminar filas con valores NaN generados por los indicadores\n",
+    "df.dropna(inplace=True)\n",
+    "\n",
+    "# Seleccionar las características (features) para el modelo con los nombres corregidos\n",
+    "features = [\n",
+    "    'close',\n",
+    "    'RSI_14',\n",
+    "    'MACD_12_26_9',\n",
+    "    'BBL_20_2.0_2.0',\n",
+    "    'BBM_20_2.0_2.0',\n",
+    "    'BBU_20_2.0_2.0',\n",
+    "    'ATRr_14',\n",
+    "    'STOCHk_14_3_3',\n",
+    "    'STOCHd_14_3_3'\n",
+    "]\n",
+    "data = df[features]\n",
+    "\n",
+    "# Guardar el número de características para usarlo en la forma de entrada del modelo\n",
+    "n_features = len(features)\n",
+    "print(f'Número de características: {n_features}')\n",
+    "\n",
+    "# Escalar los datos al rango [0, 1]\n",
     "scaler = MinMaxScaler(feature_range=(0, 1))\n",
     "scaled_data = scaler.fit_transform(data)\n",
+    "\n",
+    "# Crear un segundo escalador solo para el precio de cierre, para invertir la predicción\n",
+    "scaler_pred = MinMaxScaler(feature_range=(0, 1))\n",
+    "scaler_pred.fit_transform(data[['close']])\n",
     "\n",
     "# Función para crear secuencias de datos para el modelo GRU\n",
     "def create_sequences(data, seq_length):\n",
     "    X, y = [], []\n",
     "    for i in range(len(data) - seq_length):\n",
     "        X.append(data[i:i + seq_length])\n",
-    "        y.append(data[i + seq_length])\n",
+    "        y.append(data[i + seq_length, 0]) # Predecir solo el precio de cierre (columna 0)\n",
     "    return np.array(X), np.array(y)\n",
     "\n",
-    "# Definir la longitud de la secuencia para el modelo\n",
+    "# Definir la longitud de la secuencia\n",
     "SEQ_LENGTH = 60\n",
     "X, y = create_sequences(scaled_data, SEQ_LENGTH)\n",
     "\n",
-    "# Dividir los datos en conjuntos de entrenamiento y prueba (80% entrenamiento, 20% prueba)\n",
+    "# Dividir los datos en conjuntos de entrenamiento y prueba\n",
     "train_size = int(len(X) * 0.8)\n",
     "X_train, X_test = X[:train_size], X[train_size:]\n",
     "y_train, y_test = y[:train_size], y[train_size:]\n",
     "\n",
-    "# Imprimir las formas de los conjuntos de datos para verificar\n",
+    "# Imprimir las formas para verificar\n",
     "print(f'X_train shape: {X_train.shape}')\n",
     "print(f'y_train shape: {y_train.shape}')\n",
     "print(f'X_test shape: {X_test.shape}')\n",
@@ -80,26 +112,26 @@
    "source": [
     "# Construir el modelo GRU usando Keras Sequential API\n",
     "model = Sequential([\n",
-    "    # Primera capa GRU con 50 unidades, retorna secuencias para la siguiente capa\n",
-    "    GRU(50, return_sequences=True, input_shape=(SEQ_LENGTH, 1)),\n",
-    "    # Capa de Dropout para regularización y prevenir sobreajuste\n",
+    "    # Primera capa GRU con 50 unidades, con la forma de entrada correcta\n",
+    "    GRU(50, return_sequences=True, input_shape=(SEQ_LENGTH, n_features)),\n",
+    "    # Capa de Dropout para regularización\n",
     "    Dropout(0.2),\n",
     "    # Segunda capa GRU con 50 unidades\n",
     "    GRU(50, return_sequences=False),\n",
     "    Dropout(0.2),\n",
     "    # Capa densa con 25 neuronas\n",
     "    Dense(25),\n",
-    "    # Capa de salida con una neurona para predecir el precio\n",
+    "    # Capa de salida con una neurona para predecir el precio de cierre\n",
     "    Dense(1)\n",
     "])\n",
     "\n",
-    "# Compilar el modelo con el optimizador 'adam' y la pérdida de error cuadrático medio\n",
+    "# Compilar el modelo\n",
     "model.compile(optimizer='adam', loss='mean_squared_error')\n",
     "\n",
     "# Mostrar un resumen de la arquitectura del modelo\n",
     "model.summary()\n",
     "\n",
-    "# Entrenar el modelo con los datos de entrenamiento y validarlo con los datos de prueba\n",
+    "# Entrenar el modelo\n",
     "history = model.fit(X_train, y_train, batch_size=32, epochs=50, validation_data=(X_test, y_test))"
    ]
   },
@@ -116,9 +148,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Guardar el modelo entrenado en un archivo HDF5 para su uso posterior\n",
-    "model.save('gru_model.h5')\n",
-    "print('Modelo guardado como gru_model.h5')"
+    "# Guardar el modelo entrenado en el formato recomendado .keras\n",
+    "model.save('gru_model.keras')\n",
+    "print('Modelo guardado como gru_model.keras')"
    ]
   },
   {
@@ -137,19 +169,22 @@
     "# Realizar predicciones sobre el conjunto de prueba\n",
     "predictions = model.predict(X_test)\n",
     "# Invertir la escala de las predicciones para obtener los precios reales\n",
-    "predictions = scaler.inverse_transform(predictions)\n",
+    "predictions = scaler_pred.inverse_transform(predictions)\n",
     "# Invertir la escala de los datos de prueba para comparación\n",
-    "y_test_inv = scaler.inverse_transform(y_test)\n",
+    "y_test_inv = scaler_pred.inverse_transform(y_test.reshape(-1, 1))\n",
     "\n",
     "# Graficar los precios reales vs. los precios predichos\n",
     "plt.figure(figsize=(14, 5))\n",
-    "plt.plot(data.index[train_size + SEQ_LENGTH:], y_test_inv, color='blue', label='Precio Real')\n",
-    "plt.plot(data.index[train_size + SEQ_LENGTH:], predictions, color='red', label='Precio Predicho')\n",
-    "plt.title('Predicción de Precios de AAPL')\n",
+    "# Asegurarse de que el índice para el eje X es correcto\n",
+    "plot_index = data.index[train_size + SEQ_LENGTH:]\n",
+    "plt.plot(plot_index, y_test_inv, color='blue', label='Precio Real')\n",
+    "plt.plot(plot_index, predictions, color='red', label='Precio Predicho')\n",
+    "plt.title('Predicción de Precios de AAPL con Indicadores')\n",
     "plt.xlabel('Fecha')\n",
     "plt.ylabel('Precio')\n",
     "plt.legend()\n",
-    "plt.show()"
+    "plt.savefig('prediction_plot.png') # Guardar el gráfico en lugar de mostrarlo\n",
+    "print('Gráfico de predicción guardado como prediction_plot.png')"
    ]
   },
   {
@@ -172,52 +207,86 @@
     "# Definir la estrategia de trading basada en el modelo GRU\n",
     "class GRUStrategy(bt.Strategy):\n",
     "    def __init__(self):\n",
-    "        # Cargar el modelo GRU pre-entrenado\n",
-    "        self.model = load_model('gru_model.h5')\n",
-    "        # Mantener el escalador para transformar los datos\n",
+    "        # Cargar el modelo GRU pre-entrenado desde el nuevo formato\n",
+    "        self.model = load_model('gru_model.keras')\n",
+    "        # Mantener los escaladores para transformar los datos\n",
     "        self.scaler = scaler\n",
+    "        self.scaler_pred = scaler_pred\n",
     "        self.seq_length = SEQ_LENGTH\n",
+    "        self.n_features = n_features\n",
+    "        \n",
+    "        # --- Inicializar todos los indicadores usados en el entrenamiento ---\n",
     "        self.data_close = self.datas[0].close\n",
+    "        self.rsi = bt.indicators.RSI(self.datas[0], period=14)\n",
+    "        self.macd = bt.indicators.MACD(self.datas[0], period_me1=12, period_me2=26, period_signal=9)\n",
+    "        self.bbands = bt.indicators.BollingerBands(self.datas[0], period=20)\n",
+    "        self.atr = bt.indicators.AverageTrueRange(self.datas[0], period=14)\n",
+    "        self.stoch = bt.indicators.Stochastic(self.datas[0], period=14)\n",
     "\n",
     "    def next(self):\n",
-    "        # Asegurarse de que hay suficientes datos para crear una secuencia\n",
-    "        if len(self.data_close) > self.seq_length:\n",
-    "            # Preparar los datos más recientes para la predicción\n",
-    "            last_data = np.array(self.data_close.get(size=self.seq_length))\n",
-    "            last_data_scaled = self.scaler.transform(last_data.reshape(-1, 1))\n",
-    "            X_pred = np.array([last_data_scaled])\n",
-    "            \n",
-    "            # Predecir el precio del siguiente día\n",
-    "            prediction_scaled = self.model.predict(X_pred)\n",
-    "            prediction = self.scaler.inverse_transform(prediction_scaled)[0][0]\n",
-    "            \n",
-    "            # Lógica de trading simple: comprar si la predicción es mayor que el precio actual, vender si es menor\n",
-    "            if prediction > self.data_close[0]:\n",
-    "                if not self.position: # Si no hay una posición abierta\n",
-    "                    self.buy() # Comprar\n",
-    "            elif prediction < self.data_close[0]:\n",
-    "                if self.position: # Si hay una posición abierta\n",
-    "                    self.sell() # Vender\n",
+    "        # Dejar que los indicadores se calienten. El periodo más largo es 26 (MACD) + 60 de la secuencia.\n",
+    "        if len(self) < self.seq_length + 26:\n",
+    "            return\n",
+    "        \n",
+    "        # --- Recoger los últimos `seq_length` valores de cada característica ---\n",
+    "        close_vals = self.data_close.get(size=self.seq_length)\n",
+    "        rsi_vals = self.rsi.get(size=self.seq_length)\n",
+    "        macd_vals = self.macd.macd.get(size=self.seq_length)\n",
+    "        bbl_vals = self.bbands.lines.bot.get(size=self.seq_length)\n",
+    "        bbm_vals = self.bbands.lines.mid.get(size=self.seq_length)\n",
+    "        bbu_vals = self.bbands.lines.top.get(size=self.seq_length)\n",
+    "        atr_vals = self.atr.get(size=self.seq_length)\n",
+    "        stochk_vals = self.stoch.lines.percK.get(size=self.seq_length)\n",
+    "        stochd_vals = self.stoch.lines.percD.get(size=self.seq_length)\n",
+    "        \n",
+    "        # Crear la matriz de entrada para el modelo en el orden correcto\n",
+    "        input_array = np.array([\n",
+    "            close_vals, rsi_vals, macd_vals, \n",
+    "            bbl_vals, bbm_vals, bbu_vals, \n",
+    "            atr_vals, \n",
+    "            stochk_vals, stochd_vals\n",
+    "        ]).T\n",
+    "        \n",
+    "        # Escalar los datos de entrada\n",
+    "        scaled_input = self.scaler.transform(input_array)\n",
+    "        \n",
+    "        # Preparar el lote para la predicción\n",
+    "        X_pred = np.array([scaled_input])\n",
+    "        \n",
+    "        # Predecir el precio del siguiente día\n",
+    "        prediction_scaled = self.model.predict(X_pred)\n",
+    "        prediction = self.scaler_pred.inverse_transform(prediction_scaled)[0][0]\n",
+    "        \n",
+    "        # Lógica de trading\n",
+    "        if prediction > self.data_close[0]:\n",
+    "            if not self.position:\n",
+    "                self.buy()\n",
+    "        elif prediction < self.data_close[0]:\n",
+    "            if self.position:\n",
+    "                self.sell()\n",
     "\n",
-    "# Instanciar el motor de backtesting de backtrader\n",
+    "# --- Ejecutar el Backtest ---\n",
     "cerebro = bt.Cerebro()\n",
-    "\n",
-    "# Añadir el feed de datos al motor\n",
     "data_feed = bt.feeds.PandasData(dataname=df)\n",
     "cerebro.adddata(data_feed)\n",
-    "\n",
-    "# Añadir la estrategia de trading al motor\n",
     "cerebro.addstrategy(GRUStrategy)\n",
-    "\n",
-    "# Configurar el capital inicial y la comisión por operación\n",
     "cerebro.broker.setcash(100000.0)\n",
     "cerebro.broker.setcommission(commission=0.001)\n",
     "\n",
-    "# Imprimir el capital inicial y ejecutar el backtest\n",
     "print(f'Capital Inicial: {cerebro.broker.getvalue()}')\n",
     "cerebro.run()\n",
-    "# Imprimir el capital final después del backtesting\n",
-    "print(f'Capital Final: {cerebro.broker.getvalue()}')"
+    "print(f'Capital Final: {cerebro.broker.getvalue()}')\n",
+    "\n",
+    "# Guardar el gráfico del backtest con las operaciones\n",
+    "fig = cerebro.plot(style='candlestick')[0][0]\n",
+    "fig.savefig('backtest_plot.png')\n",
+    "print('Gráfico del backtest guardado como backtest_plot.png')\n",
+    "\n",
+    "# Guardar el gráfico del backtest sin indicadores\n",
+    "# plotind=False evita que se dibujen los indicadores en sub-gráficos\n",
+    "fig2 = cerebro.plot(style='candlestick', plotind=False)[0][0]\n",
+    "fig2.savefig('backtest_plot_simple.png')\n",
+    "print('Gráfico del backtest sin indicadores guardado como backtest_plot_simple.png')"
    ]
   }
  ],
